--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,25 +1,71 @@
-<p id="notice"><%= notice %></p>
+<% content_for :content do %>
+  <p id="notice" class="alert alert-success" role="alert">
+  <%= notice %></p>
+  <div class="layout-content">
+    <div class="layout-content-body">
+      <div class="title-bar">
+        <h1 class="title-bar-title">
+          <span class="d-ib">Страны</span>
+        </h1>
+      </div>
+      <%= link_to 'Добавить страну', new_country_path, :class => "btn btn-primary btn-lg btn-warning" %>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="panel">
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table id="demo-dynamic-tables-1" class="table table-middle nowrap">
+                  <thead>
+                  <tr>
+                    <th>
+                      #
+                    </th>
+                    <th>Название страны</th>
+                    <th>Дата создания</th>
+                    <th>Дата изменения</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <% @countries.each_with_index do |country, index| %>
+                    <td>
+                      <%= index+1 %>
+                    </td>
+                    <td>
+                      <strong><%= country.name %></strong>
+                    </td>
+                    <td class="maw-320">
+                      <%= country.created_at %>
+                    </td>
+                    <td>
+                      <%= country.updated_at %>
+                    </td>
+                    <td>
+                      <div class="btn-group pull-right dropdown">
+                        <button class="btn btn-link link-muted" aria-haspopup="true"
+                                data-toggle="dropdown" type="button">
+                          <span class="icon icon-ellipsis-h icon-lg icon-fw"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-right">
+                          <li>
+                            <%= link_to 'Изменить', edit_country_path(country) %>
+                          </li>
+                          <li>
+                            <%= link_to 'Удалить', country, method: :delete, data: {confirm: 'Are you sure?'} %>
+                          </li>
+                        </ul>
+                      </div>
+                    </td>
+                    </tr>
+                  <% end -%>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<h1>Countries</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @countries.each do |country| %>
-      <tr>
-        <td><%= link_to 'Show', country %></td>
-        <td><%= link_to 'Edit', edit_country_path(country) %></td>
-        <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Country', new_country_path %>
+<% end %>
+<%= render template: "layouts/application" %>
