--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -11,10 +11,10 @@
               </a>
             </li>
             <li class="sidenav-item">
-              <a href="http://localhost:3000/api/v1/countries" aria-haspopup="true">
+              <%= link_to countries_path(@countries), :class => "button small-button green-button" do %>
                 <span class="sidenav-icon icon fa-globe"></span>
                 <span class="sidenav-label">Страны</span>
-              </a>
+              <% end %>
             </li>
             <li class="sidenav-item">
               <a href="http://chistokot.test/admin/categories" aria-haspopup="true">
