--- a/app/views/layouts/statistics.erb
+++ b/app/views/layouts/statistics.erb
@@ -10,7 +10,7 @@
         <div class="card-body">
           <h5 class="card-title">Число зарегистрированных турбаз:</h5>
           <div class="card-text">
-            <h3></h3>
+            <h3> <%= @data %></h3>
           </div>
         </div>
       </div>
