--- a/app/views/countries/edit.html.erb
+++ b/app/views/countries/edit.html.erb
@@ -1,5 +1,8 @@
 <% content_for :content do %>
-  <div class="title-bar">
+  <div class="layout-content">
+    <div class="layout-content-body">
+
+    <div class="title-bar">
     <h1 class="title-bar-title">
             <span class="d-ib">
                     Изменить страну
@@ -41,5 +44,8 @@
       </div>
     </div>
   <% end %>
+  </div>
+  </div>
+
   <%= render 'form', country: @country %>
 <% end %>
