--- a/app/views/regions/_form.html.erb
+++ b/app/views/regions/_form.html.erb
@@ -1,17 +1,18 @@
 <%= form_with(model: region, local: true) do |form| %>
   <% if region.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(region.errors.count, "error") %> prohibited this region from being saved:</h2>
+    <div class="layout-content">
+      <div class="layout-content-body">
 
-      <ul>
-        <% region.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+        <div id="error_explanation">
+          <h2><%= pluralize(region.errors.count, "error") %> Сохранение невозможо по причине:</h2>
+          <ul>
+            <% region.errors.full_messages.each do |message| %>
+              <li class="alert-link"><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
   <% end %>
-
-  <div class="actions">
-    <%= form.submit %>
   </div>
+  </div>
+
 <% end %>
