--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,6 +1,9 @@
 <% content_for :content do %>
-  <p id="notice" class="alert alert-success" role="alert">
-  <%= notice %></p>
+  <% unless notice.nil? %>
+    <div class="alert alert-success">
+      <p class="alert-link"><%= notice %></p>
+    </div>
+  <% end %>
   <div class="layout-content">
     <div class="layout-content-body">
       <div class="title-bar">
@@ -35,7 +38,7 @@
                       <strong><%= region.name %></strong>
                     </td>
                     <td>
-                      <strong><%= region.country_id %></strong>
+                      <strong><%= region.country.name %></strong>
                     </td>
                     <td class="maw-320">
                       <%= region.created_at %>
