Подключены скрипты. В модели дописаны ассоциации.

--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -38,7 +38,7 @@
                       <strong><%= camp.name %></strong>
                     </td>
                     <td>
-                      <strong><%= camp.city.name %></strong>
+                      <strong><%= camp.city.name+' ('+camp.city.region.name + ', ' +camp.city.region.country.name+')'%></strong>
                     </td>
                     <td class="maw-320">
                       <%= camp.created_at %>
