--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -38,7 +38,7 @@
                       <strong><%= city.name %></strong>
                     </td>
                     <td>
-                      <strong><%= city.region.name %></strong>
+                      <strong><%= city.region.name + ' (' +city.region.country.name+')'%></strong>
                     </td>
                     <td class="maw-320">
                       <%= city.created_at %>
