--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -4,31 +4,31 @@
     <div class="custom-scrollbar">
       <nav id="sidenav" class="sidenav-collapse collapse">
         <ul class="sidenav">
-          <li class="sidenav-item active">
+          <li class="sidenav-item <%='active' if current_page?(root_path) %>">
             <a href="/" aria-haspopup="true">
               <span class="sidenav-icon icon icon-home"></span>
               <span class="sidenav-label">Главная</span>
             </a>
           </li>
-          <li class="sidenav-item">
+          <li class="sidenav-item <%='active' if current_page?(countries_path) %>">
             <%= link_to countries_path(@countries), :class => "button small-button green-button" do %>
               <span class="sidenav-icon icon fa-globe"></span>
               <span class="sidenav-label">Страны</span>
             <% end %>
           </li>
-          <li class="sidenav-item">
+          <li class="sidenav-item <%='active' if current_page?(regions_path) %>">
             <%= link_to regions_path(@regions), :class => "button small-button green-button" do %>
               <span class="sidenav-icon icon fa-road"></span>
               <span class="sidenav-label">Регионы</span>
             <% end %>
           </li>
-          <li class="sidenav-item">
+          <li class="sidenav-item <%='active' if current_page?(cities_path) %>">
             <%= link_to cities_path(@cities), :class => "button small-button green-button" do %>
               <span class="sidenav-icon icon fa-users"></span>
               <span class="sidenav-label">Города</span>
             <% end %>
           </li>
-          <li class="sidenav-item">
+          <li class="sidenav-item <%='active' if current_page?(camps_path) %>">
             <%= link_to camps_path(@camps), :class => "button small-button green-button" do %>
               <span class="sidenav-icon icon fa-bed"></span>
               <span class="sidenav-label">Турбазы</span>
