--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :content do %>
-  <% unless notice.nil? %>
-    <div class="alert alert-success">
-      <p class="alert-link"><%= notice %></p>
-    </div>
-  <% end %>
   <div class="layout-content">
     <div class="layout-content-body">
+      <% unless notice.nil? %>
+        <div class="alert alert-success" role="alert">
+          <%= notice %>
+        </div>
+      <% end %>
       <div class="title-bar">
         <h1 class="title-bar-title">
           <span class="d-ib">Города</span>
