--- a/app/views/regions/edit.html.erb
+++ b/app/views/regions/edit.html.erb
@@ -22,7 +22,7 @@
 
             <label class="col-sm-3 control-label" for="form-control-1">Страна</label>
             <div class="col-xs-4 col-sm-3">
-              <% collection_select(:country, Country.all, :id, :name, include_blank: 'Пожалуйста, укажите страну', :class=>'custom-select') %>
+              <%= region.collection_select(:country_id, Country.all, :id, :name, {:multiple => true }, :class=>'custom-select' ) %>
             </div>
 
             <label class="col-sm-3 control-label" for="form-control-1"></label>
